<resources>
    <string name="app_name">Visitor</string>
    <string name="my_account">Mi cuenta</string>
    <string name="home">Inicio</string>
    <string name="registrarCasa">Registrar casa</string>
    <string name="listaCasas">Lista de casas</string>
    <string name="registrarVisita">Registrar visita</string>
    <string name="listaVisitas">Lista de visitas</string>
    <string name="registrarCarro">Registrar carro</string>
    <string name="listaCarros">Lista de carros</string>
    <string name="other">Other</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notification">Cerrar sesion</string>
    <!-- TODO: List cars -->
    <string name="residencial_las_gardenias">Residencial Las Gardenias</string>
    <string name="lista_de_carros">Lista de carros</string>
    <string name="registrar_carro">Registrar carro</string>
    <string name="divider">divider</string>
    <string name="visitor_logo">visitor logo</string>
    <string name="email">Tipo de usuario</string>
    <string name="access">Iniciar Sesión</string>
    <string name="registrar">Registrar</string>
    <string name="contrase_a">Contraseña</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="correo_electr_nico">Correo electrónico</string>
</resources>