<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:title="@string/my_account"
        >
        <menu>
            <item
                android:id="@+id/home"
                android:title="@string/home"
                android:icon="@drawable/ic_notification"
                />
            <item
                android:id="@+id/registrarCasa"
                android:title="@string/registrarCasa"
                android:icon="@drawable/ic_home"
                />
            <item
                android:id="@+id/listaCasas"
                android:title="@string/listaCasas"
                android:icon="@drawable/ic_list"
                />
            <item
                android:id="@+id/registrarVisita"
                android:title="@string/registrarVisita"
                android:icon="@drawable/ic_profile"
                />
            <item
                android:id="@+id/listaVisitas"
                android:title="@string/listaVisitas"
                android:icon="@drawable/ic_visitantes"
                />
            <item
                android:id="@+id/registrarCarro"
                android:title="@string/registrarCarro"
                android:icon="@drawable/ic_car"
                />
            <item
                android:id="@+id/listaCarros"
                android:title="@string/listaCarros"
                android:icon="@drawable/ic_list"
                />

        </menu>

    </item>


</menu>